--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>
+    
 </head>
 <body>
-
+    <title>Hello World</title>
+hello
 </body>
 </html>
