--- a/game.html
+++ b/game.html
@@ -5,7 +5,6 @@
     <title>Game Page</title>
     <style>
         body{
-
         }
         .navBar{
             text-align: left;
@@ -53,6 +52,7 @@
             width: ;
         }
         button{
+            border-radius: 10px;
             background-color: white;
             width: 85px;
             background-color: #01426a;
