--- a/game.html
+++ b/game.html
@@ -37,13 +37,14 @@
             background-color: ;
             box-sizing: border-box;
         }
-        #image{
+        img{
             margin-right: 2px;
             background-color: #D44420;
             text-align: center;
             font-size: 20px;
-            height: 250px;
+            height: 300px;
             margin-top: 62px;
+            max-block-size: 200 px;
         }
         #options{
             margin-left: 2px;
@@ -72,8 +73,9 @@
 </div>
 <div class="container">
     <div class = "flexBox" id="image">
-        image
+        <img src="/images/campus-test.jpg">
     </div>
+    
     <div class = "flexBox"id="options">
         <div id="info" >
             Score:1
