--- a/game.html
+++ b/game.html
@@ -38,13 +38,13 @@
             box-sizing: border-box;
         }
         img{
-            margin-right: 2px;
+            /* margin-right: 200px; */
             background-color: #D44420;
             text-align: center;
             font-size: 20px;
-            height: 300px;
-            margin-top: 62px;
-            max-block-size: 200 px;
+            max-height: 90%;
+            height : auto;
+            margin-top: 10%;
         }
         #options{
             margin-left: 2px;
