--- a/game.html
+++ b/game.html
@@ -5,6 +5,7 @@
     <title>Game Page</title>
     <style>
         body{
+            background-color:gray;
         }
         .navBar{
             text-align: left;
